Proceso de login, registro y almacenamiento de credenciales de usuario completado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,16 @@
     <string name="action_settings">Settings</string>
     <string name="upload_dialog_title">Subiendo las fotos</string>
     <string name="register_dialog_title">Registrando campaña</string>
+    <string name="login_dialog_title">Iniciando sesión</string>
     <string name="toastMakeFrontPhoto">Haga una foto de la parte frontal del DNI.</string>
     <string name="toastMakeBackPhoto">Ahora, haga una foto de la parte trasera del DNI.</string>
     <string name="toastWrongUploadingResult">Error subiendo las fotos al servidor,\nintentelo de nuevo más tarde</string>
     <string name="toastWrongRegisterResult">Error registrando la campaña,\ninténtelo de nuevo más tarde</string>
+    <string name="toastWrongLoginResult">Error inciando sesión en la campaña,\ninténtelo de nuevo más tarde</string>
     <string name="toastCanceledResult">Operación cancelada por el usuario</string>
     <string name="toastCorrectUploadingResult">Fotos subidas correctamente al servidor</string>
     <string name="toastCorrectRegisterResult">Campaña registrada correctamente</string>
+    <string name="toastCorrectLoginResult">Sesión iniciada correctamente</string>
     <string name="title_activity_login">Login</string>
     <string name="title_activity_register">Register</string>
     <string name="prompt_campaign">Campaña</string>
@@ -21,16 +24,15 @@
     <string name="action_register">Crea una nueva campaña</string>
     <string name="action_register_short">Registra</string>
     <string name="error_field_required">Campo requerido</string>
-    <string name="error_invalid_campaign">Campaña invalido</string>
-    <string name="error_invalid_password">Contraseña invalida, debe contener 8 caracteres</string>
+    <string name="error_invalid_campaign">Campaña inválida, debe de tener una longitud de, al menos,
+                                        2 caracteres alfanumericos o . _ -</string>
+    <string name="error_invalid_password">Campaña inválida, debe de tener una longitud de, al menos, 8 caracteres ASCII</string>
     <string name="error_passwords_not_equals">Las contraseñas no coinciden</string>
     <string name="error_incorrect_password">Contraseña incorrecta</string>
     <string name="instructions"><big>Para tomar las fotos pulse el boton inferior con el simbolo +.</big>
         \nTras esto se le pedirá hacer una foto a la parte frontal del DNI (la que contiene la foto).
         \nA continuación gire el DNI y haga lo mismo con la otra cara.
         \nAparecerá un dialogo que le mostrara el progreso y resultado de la subida.</string>
-
-
 
 
 </resources>
